@@ -1,3 +1,10 @@
+2004-03-09  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* configure.ac: Bump version to 2.59.  Apply suggested autoupdates.
+	* acconfig.h: Delete redundant file.
+	* config.in: Regenerate.
+	* configure: Regenerate.
+
 2004-03-09  Hans-Peter Nilsson  <hp@axis.com>
 
 	* configure: Regenerate for config/accross.m4 correction.
